# voila-materialscloud-template

./: .gitignore  MANIFEST.in  Makefile  README.md  copy_voila_template.py  example.ipynb  jupyter_config.json  postBuild  pyproject.toml  requirements.txt  requirements_base.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py
.ci/dummy_heroku_app/app/: main.py
.github/: dependabot.yml
.github/dummy_heroku_app/: Procfile  main.py  requirements.txt
.github/dummy_heroku_app/app/: _utils.py  main.py
.github/workflows/: ci-build.yml  publish-on-pypi.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
example-notebooks/: example.ipynb  voila.json
materialscloud/nbconvert_templates/: base.tpl  header.tpl  voila.tpl
materialscloud/static/: mcloud_theme.min.css
share/jupyter/nbconvert/templates/materialscloud/: index.html.j2
share/jupyter/nbconvert/templates/materialscloud-discover/: index.html.j2
share/jupyter/nbconvert/templates/materialscloud-iframe/: conf.json  index.html.j2
share/jupyter/nbconvert/templates/materialscloud-tool/: index.html.j2
share/jupyter/voila/templates/materialscloud/: base.html  browser-open.html  index.html.j2  spinner.macro.html.j2  tree.html
share/jupyter/voila/templates/materialscloud-discover/: index.html.j2  spinner.macro.html.j2
share/jupyter/voila/templates/materialscloud-iframe/: 404.html  base.html  browser-open.html  error.html  index.html.j2  spinner.macro.html.j2  tree.html
share/jupyter/voila/templates/materialscloud-tool/: base.html  index.html.j2  tree.html
(+7 files in other folders)
